--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.3",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-size-matters": "^0.4.0"
