--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
+    "@react-navigation/stack": "^6.3.12",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-size-matters": "^0.4.0"
   },
   "devDependencies": {
