--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/stack": "^6.3.12",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-size-matters": "^0.4.0"
   },
   "devDependencies": {
