--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "web": "webpack serve --mode=development --config webpack.config.js"
+    "test": "jest"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.4",
@@ -17,16 +16,13 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
-    "@svgr/webpack": "^6.5.1",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
     "react-native": "0.71.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.8.0",
-    "react-native-web": "^0.18.12",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
@@ -40,20 +36,13 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-react-native-web": "^0.18.12",
     "eslint": "^8.19.0",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native"
