--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.71.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.4",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-size-matters": "^0.4.0",
