--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.3.0",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
+    "expo": "^48.0.0",
+    "expo-blur": "^12.2.2",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-gesture-handler": "^2.9.0",
