--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/blur": "^4.3.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -22,12 +23,14 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "^6.1.4",
     "react-native-reanimated": "^3.0.1",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.8.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-wheely": "^0.6.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
