--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod": "cd ios && pod install && cd .. && npm run ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
