--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.1.4",
     "react-native-reanimated": "^3.0.1",
     "react-native-redash": "^18.1.0",
