--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/uuid": "^9.0.1",
     "expo": "^48.0.5",
     "expo-blur": "^12.2.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.1.4",
     "react-native-reanimated": "^3.0.1",
