--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
+    "ts": "tsc --noEmit",
     "start": "react-native start",
     "test": "jest",
     "pod": "cd ios && pod install && cd .. && npm run ios"
